# ndt

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  docker-compose.yml
discord_bot/: Cargo.toml  Dockerfile
discord_bot/src/: main.rs
frontend/: package.json  tailwind.config.cjs
frontend/src/: env.ts
frontend/src/api_wrapper/: index.ts
frontend/src/components/: auth_status.svelte  blog_card.svelte  comment.svelte  footer.svelte  (+6 more)
server/: Cargo.toml  Dockerfile
server/migrations/2021-07-30-063146_initial_db/: down.sql  up.sql
server/migrations/2022-10-08-072551_add_joined_date_to_user/: down.sql  up.sql
server/migrations/2022-10-14-173702_add_creation_date_to_comment/: down.sql  up.sql
server/src/: email.rs  env.rs  errors.rs  main.rs  paginated_vec.rs
server/src/db/: mod.rs  schema.rs
server/src/db/comment/: models.rs  mutation.rs  query.rs
server/src/db/post/: models.rs  mutation.rs  query.rs
server/src/db/user/: models.rs  mutation.rs  query.rs
server/src/db/voting/: models.rs  mutation.rs  query.rs
server/src/guards/: admin_only.rs  login_required.rs  mod.rs
server/src/jwt/: claims.rs  mod.rs  sign.rs  verify.rs
server/src/services/: mod.rs
server/src/services/auth/: login.rs  mod.rs  password_reset.rs  payloads.rs  refresh_accesstoken.rs  register.rs
server/src/services/blog/: data_query.rs  data_update.rs  mod.rs  payload.rs  voting.rs
server/src/services/comment/: data_query.rs  data_update.rs  mod.rs  payload.rs
server/src/services/discord/: mod.rs
server/src/services/user/: data_query.rs  data_update.rs  payload.rs
(+42 files in other folders)
