[package]
name = "discord_bot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11", features = ["collector"] }
dotenv = "0.15.0"
tokio = { version = "1.13.1", features = [ "rt-multi-thread" ] }
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0.127"
